fixed contrast

--- a/blog/static/css/custom.css
+++ b/blog/static/css/custom.css
@@ -15,3 +15,7 @@ figcaption p {
     border-bottom: 1px solid #ddd;
     margin: 30px 0;
 }
+
+.c-article__summary {
+    color: #666;
+}
